created color coder that changes as time of day changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,14 @@ i {
   display: inline;
 }
 
+.present {
+  background-color: #da7e57;
+}
+
+.future {
+  background-color: #81e6d9;
+}
+
 /* Clock */
 .circle {
     width: 180px;
