changed some color in the color code classes and created an init function that calls the other render function, eventually I'd like to add another piece to the init function that clears the schedule after the day is over

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,11 +65,11 @@ i {
 }
 
 .present {
-  background-color: #da7e57;
+  background-color: rgba(255, 164, 139, 1);
 }
 
 .future {
-  background-color: #81e6d9;
+  background-color: rgba(103, 227, 255, 1);
 }
 
 /* Clock */
